# tjson

./: gcovr.cfg  json.c  json.h  meson.build  meson.options
.github/workflows/: build.yml  lint.yml  musl.yml  test.yml
subprojects/: c_variant_generator.wrap  tmap.h.wrap  trc.wrap  tstr_builder.wrap  tvec.h.wrap
tests/: json.cpp  json_oom.cpp  json_schema.cpp  meson.build  valgrind_wrapper.sh
tests/files/: expected.schema.json  test.json
tests/helpers/: allocators.cpp  allocators.hpp  c_types.cpp  c_types.hpp  cpp_types.cpp  cpp_types.hpp  generic.cpp  generic.hpp  helpers.hpp  json.cpp  json.hpp  json_schema.cpp  json_schema.hpp  main.cpp  meson.build  string_maker.hpp  support.hpp
