
support_src += files(
    'helpers/c_types.cpp',
    'helpers/c_types.hpp',
    'helpers/cpp_types.cpp',
    'helpers/cpp_types.hpp',
    'helpers/hpack.cpp',
    'helpers/hpack.hpp',
    'helpers/http.cpp',
    'helpers/http.hpp',
    'helpers/json.cpp',
    'helpers/json.hpp',
    'generic.cpp',
    'generic.hpp',
    'helpers.hpp',
    'sha1.cpp',
    'sha1.hpp',
    'support.hpp',
)
